--- a/index.html
+++ b/index.html
@@ -1,76 +1,78 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
-
-    <title>Narrow Jumbotron Template for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../css/editor.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="narrow-jumbotron.css" rel="stylesheet">
-  </head>
-
-  <body>
-
-    <div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills float-right">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </nav>
-        <h3 class="text-muted">Project name</h3>
-      </div>
-
-      <div class="jumbotron">
-        <h1 class="display-3">Jumbotron heading</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
-      </div>
-
-      <div class="row marketing">
-        <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>fer77</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav>
+        <div class="wrapper">
+            <div class="logo"><a href=''>fer77</a></div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#partners">Partners</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="" class="tbl-biru">Sign Up</a></li>
+                </ul>
+            </div>
         </div>
+    </nav>
+    <div class="wrapper">
+        <!-- untuk home -->
+        <section id="home">
+            <img src="https://img.freepik.com/free-vector/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg?size=626&ext=jpg&ga=GA1.2.1769275626.1605867161"/>
+            <div class="kolom">
+                <p class="deskripsi">Belajar Programming #DirumahAja</p>
+                <h2>Tetap Sehat, Tetap Semangat</h2>
+                <p><a href="" class="tbl-pink">Pelajari Lebih Lanjut</a></p>
+            </div>
+        </section>
 
-        <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+        <!-- untuk partners -->
+        <section id="partners">
+            <div class="tengah">
+                <div class="kolom">
+                    <h2>Partners</h2>
+                </div>
+                <div class="partner-list">
+                    <div class="kartu-partner">
+                        <img src="https://yt3.googleusercontent.com/2qk8CCecEec6j5IQ84Pubb-YIK28m7AgoW9idgEWaZpAtWkxs2eJ9zrZ6srAgw8kRzMoRITl=s176-c-k-c0x00ffffff-no-rj"/>
+                    </div>
+                    <div class="kartu-partner">
+                        <img src="https://yt3.googleusercontent.com/ytc/AL5GRJWtOHY3MuwJ45weN8YeXsgxBBO_MrfC3_j7iG9x=s900-c-k-c0x00ffffff-no-rj"/>
+                    </div>
+                    <div class="kartu-partner">
+                        <img src="https://yt3.googleusercontent.com/ytc/AL5GRJVF6TzDr1RBp4l4eopBWKnpHudDn3rI3mp7sbEs_A=s176-c-k-c0x00ffffff-no-rj"/>
+                </div>
+            </div>
+        </section>
+    </div>
 
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+    <div id="contact">
+        <div class="wrapper">
+            <div class="footer">
+                <div class="footer-section">
+                    <h3>About</h3>
+                </div>
+                <div class="footer-section">
+                    <h3>Contact</h3>
+                    <a href="https://github.com/ferr77"><b>Github</b></a>
+                </div>
+                <div class="footer-section">
+                    <h3>Social</h3>
+                </div>
+            </div>
         </div>
-      </div>
+    </div>
 
-      <footer class="footer">
-        <p>© Company 2017</p>
-      </footer>
-
-    </div> <!-- /container -->
-  
-
+    <div id="copyright">
+        <div class="wrapper">
+            &copy; 2023 ferr77, Inc.
+        </div>
+    </div>
+    
 </body>
 </html>
