--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact</h3>
-                    <a href="https://github.com/ferr77"><b>Github</b></a>
+                    <a href="https://github.com/ferr77"><img src="https://p.kindpng.com/picc/s/128-1280187_github-logo-png-github-transparent-png.png"> </a>
                 </div>
                 <div class="footer-section">
                     <h3>Social</h3>
