--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Social</h3>
+                    <a href="https://www.instagram.com/superxen_">
                 </div>
             </div>
         </div>
