--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Social</h3>
-                    <a href="https://www.instagram.com/superxen_"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnkEghYJX4oIcWhEW-5bP1xSP21Xig2M3thZi6EQ-mlnCAw3myqm-BEXg&s=10"></a>
+                    <a href="https://www.instagram.com/superxen_"><img src="https://www.kindpng.com/picc/m/159-1596109_logo-instagram-vector-2017-hd-png-download.png" alt="Logo Instagram Vector 2017,HDRQ&Download@kindpng.com"></a>
                 </div>
             </div>
         </div>
