--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fer77</title>
+    <title>ferr77</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href=''>fer77</a></div>
+            <div class="logo"><a href=''>ferr77</a></div>
             <div class="menu">
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#partners">Partners</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="" class="tbl-biru">Sign Up</a></li>
+                    <li><a href="https://youtu.be/dQw4w9WgXcQ" class="tbl-biru">Sign Up</a></li>
                 </ul>
             </div>
         </div>
@@ -26,8 +26,8 @@
             <img src="https://img.freepik.com/free-vector/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg?size=626&ext=jpg&ga=GA1.2.1769275626.1605867161"/>
             <div class="kolom">
                 <p class="deskripsi">Belajar Programming #DirumahAja</p>
-                <h2>Tetap Sehat, Tetap Semangat</h2>
-                <p><a href="" class="tbl-pink">Pelajari Lebih Lanjut</a></p>
+                <h2>Teruslah Bernafas</h2>
+                <p><a href="https://youtu.be/dQw4w9WgXcQ" class="tbl-pink">Pelajari Lebih Lanjut</a></p>
             </div>
         </section>
 
@@ -56,6 +56,7 @@
             <div class="footer">
                 <div class="footer-section">
                     <h3>About</h3>
+                    <a href=""><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsFVGKxhZxrAxcFYpA6TpIgVVTtyfn55mZKThP3Y6ZE0zpe-XXoxTgyIV_&s=10"></a>
                 </div>
                 <div class="footer-section">
                     <h3>Contact</h3>
@@ -71,7 +72,7 @@
 
     <div id="copyright">
         <div class="wrapper">
-            &copy; 2023 ferr77, Inc.
+            &copy; 2024 ferr77, Inc.
         </div>
     </div>
     
