--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="footer">
                 <div class="footer-section">
                     <h3>About</h3>
-                    <a href="">https://youtu.be/dQw4w9WgXcQ<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsFVGKxhZxrAxcFYpA6TpIgVVTtyfn55mZKThP3Y6ZE0zpe-XXoxTgyIV_&s=10"></a>
+                    <a href="https://youtu.be/dQw4w9WgXcQ"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsFVGKxhZxrAxcFYpA6TpIgVVTtyfn55mZKThP3Y6ZE0zpe-XXoxTgyIV_&s=10"></a>
                 </div>
                 <div class="footer-section">
                     <h3>Contact</h3>
